--- a/src/app/sorting/sorting.component.html
+++ b/src/app/sorting/sorting.component.html
@@ -1,9 +1,15 @@
-<p>sorting works!</p>
+<div class="sorting-div">
+  <h1>Sort the following ammunition by damage</h1>
+  <ng-template [ngIf]="isLoadingAmmos">
+    <mat-progress-spinner class="example-margin" mode="indeterminate"></mat-progress-spinner>
+  </ng-template>
 
-<ng-template [ngIf]="isLoadingAmmos">
-  <mat-progress-spinner class="example-margin" mode="indeterminate"></mat-progress-spinner>
-</ng-template>
-
-<div *ngIf="!isLoadingAmmos && ammos">
-  <app-ammo-list *ngFor="let ammo of ammos" [ammo]="ammo"></app-ammo-list>
+  <div *ngIf="!isLoadingAmmos && ammos" cdkDropList class="ammo-list" [cdkDropListData]="ammos" (cdkDropListDropped)="dropAmmo($event)">
+  @for (ammo of ammos; track ammo) {
+    <div class="ammo-box" cdkDrag>
+        <app-ammo-list class="ammo-entry" [ammo]="ammo"></app-ammo-list>
+    </div>
+  }
+  </div>
 </div>
+
