almost finished skeleton

--- a/src/app/sorting/sorting.component.html
+++ b/src/app/sorting/sorting.component.html
@@ -2,16 +2,17 @@
 
   <mat-grid-list cols="2">
     <mat-grid-tile>
-      <h1>Sort the following ammunition by damage</h1>
+      <h1>Sort the following ammunition by {{sortedOption.name}}</h1>
     </mat-grid-tile>
     <mat-grid-tile>
       <div *ngIf="!isLoadingAmmos && ammos" cdkDropList class="ammo-list" [cdkDropListData]="ammos" (cdkDropListDropped)="dropAmmo($event)">
       @for (ammo of ammos; track ammo) {
-        <div class="ammo-box" cdkDrag [cdkDragDisabled]="isFinished" [ngStyle]="{'cursor': isFinished ? 'default' : 'move'}">
+        <div class="ammo-box" cdkDrag [cdkDragDisabled]="isCompleted" [ngStyle]="{'cursor': isCompleted ? 'default' : 'move'}">
           <app-ammo-list class="ammo-entry" [ammo]="ammo"></app-ammo-list>
         </div>
       }
       </div>
+      <mat-grid-tile-footer *ngIf="isCompleted">Puzzle completed in {{numberOfMoves}} moves!</mat-grid-tile-footer>
     </mat-grid-tile>
   </mat-grid-list>
 </div>
