--- a/src/app/guessing/guessing.component.html
+++ b/src/app/guessing/guessing.component.html
@@ -1,9 +1,9 @@
 <p>guessing works!</p>
 
 
-<mat-progress-spinner *ngIf="isLoadingAmmos" mode="indeterminate"></mat-progress-spinner>
+<mat-progress-spinner *ngIf="isLoadingAmmos; else ammoLoaded" mode="indeterminate"></mat-progress-spinner>
 
-<div>
+<ng-template #ammoLoaded>
 
   <mat-grid-list cols="3" rowHeight="3:1">
     @for (ammo of ammos; track ammo) {
@@ -11,21 +11,18 @@
         <img [ngSrc]="ammo.item.inspectImageLink" fill priority alt="ammo">
       </mat-grid-tile>
       <mat-grid-tile colspan="2">
-        <mat-form-field class="example-full-width">
-          <mat-label>Name</mat-label>
-          <input type="text"
-                 placeholder="Pick one"
-                 aria-label="Number"
-                 matInput
-                 [matAutocomplete]="auto">
-          <mat-autocomplete #auto="matAutocomplete" requireSelection  [displayWith]="displayFn">
-            @for (possibleAmmo of allAmmos; track possibleAmmo) {
-              <mat-option [value]="possibleAmmo">{{possibleAmmo.item.name}}</mat-option>
-            }
-          </mat-autocomplete>
-        </mat-form-field>
-      </mat-grid-tile>
+        <form class="example-form">
+          <mat-form-field class="example-full-width">
+            <mat-label>Assignee</mat-label>
+            <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+              @for (option of filteredOptions | async; track option) {
+                <mat-option [value]="option">{{option.item.name}}</mat-option>
     }
-
+    </mat-autocomplete>
+  </mat-form-field>
+</form>
+</mat-grid-tile>
+    }
   </mat-grid-list>
-</div>
+</ng-template>
