--- a/src/app/guessing-item/guessing-item.component.html
+++ b/src/app/guessing-item/guessing-item.component.html
@@ -1,1 +1,16 @@
-<p>guessing-item works!</p>
+<mat-grid-tile colspan="1">
+  <img [ngSrc]="solution.item.inspectImageLink" fill priority alt="ammo">
+</mat-grid-tile>
+<mat-grid-tile colspan="2">
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Assignee</mat-label>
+      <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+        @for (option of filteredOptions | async; track option) {
+          <mat-option [value]="option">{{option.item.name}}</mat-option>
+        }
+      </mat-autocomplete>
+    </mat-form-field>
+  </form>
+</mat-grid-tile>
