--- a/src/app/guessing/guessing.component.html
+++ b/src/app/guessing/guessing.component.html
@@ -1,28 +1,10 @@
 <p>guessing works!</p>
 
-
-<mat-progress-spinner *ngIf="isLoadingAmmos; else ammoLoaded" mode="indeterminate"></mat-progress-spinner>
-
-<ng-template #ammoLoaded>
-
+@if (isLoadingAmmos) {
+  <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+} @else {
   <mat-grid-list cols="3" rowHeight="3:1">
-    @for (ammo of ammos; track ammo) {
-      <mat-grid-tile colspan="1">
-        <img [ngSrc]="ammo.item.inspectImageLink" fill priority alt="ammo">
-      </mat-grid-tile>
-      <mat-grid-tile colspan="2">
-        <form class="example-form">
-          <mat-form-field class="example-full-width">
-            <mat-label>Assignee</mat-label>
-            <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-              @for (option of filteredOptions | async; track option) {
-                <mat-option [value]="option">{{option.item.name}}</mat-option>
-    }
-    </mat-autocomplete>
-  </mat-form-field>
-</form>
-</mat-grid-tile>
-    }
+  <app-guessing-item [solution]=ammos[0] [options]=allAmmos></app-guessing-item>
   </mat-grid-list>
-</ng-template>
+}
+
