adding guessing component draft

--- a/src/app/guessing-item/guessing-item.component.css
+++ b/src/app/guessing-item/guessing-item.component.css
@@ -1,4 +1,11 @@
-.example-headers-align .mat-expansion-panel-header-description {
+.example-headers-align {
+}
+
+.ammo-image {
+  padding: 10px;
+}
+
+.mat-expansion-panel-body {
   justify-content: space-between;
   align-items: center;
 }
