adding on click to image

--- a/src/app/guessing-item/guessing-item.component.html
+++ b/src/app/guessing-item/guessing-item.component.html
@@ -9,7 +9,9 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
     }
-  <img class="ammo-image" [ngSrc]="solution.item.inspectImageLink" height="30" width="43.8" priority alt="ammo">
+  <img class="ammo-image"
+       [ngSrc]="solution.item.inspectImageLink" height="30" width="43.8" priority alt="ammo"
+       (click)="openImageDialog(solution.item.inspectImageLink)">
   <form class="example-form">
     <mat-form-field class="example-full-width">
       <mat-label>Ammo</mat-label>
