--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,6 @@
     <mat-nav-list>
       <a mat-list-item href="/sorting">Sorting</a>
       <a mat-list-item href="/guessing">Guessing</a>
-      <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -23,6 +22,9 @@
       }
       <span>{{title}}</span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+    <div class="main-content">
+      <router-outlet></router-outlet>
+    </div>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
