--- a/src/app/guessing-item/guessing-item.component.html
+++ b/src/app/guessing-item/guessing-item.component.html
@@ -1,18 +1,17 @@
 <mat-expansion-panel hideToggle disabled [expanded]="!isCompleted" class="example-headers-align">
     @if (isCompleted) {
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        <img class="ammo-image" [ngSrc]="solution.item.inspectImageLink" height="30" width="43.8" priority alt="ammo">
-      </mat-panel-title>
-      <mat-panel-description>
-        {{solution.item.name}}
-      </mat-panel-description>
-    </mat-expansion-panel-header>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          <img class="ammo-image" [ngSrc]="solution.item.inspectImageLink" height="30" width="43.8" priority alt="ammo">
+        </mat-panel-title>
+        <mat-panel-description>
+          {{solution.item.name}}
+        </mat-panel-description>
+      </mat-expansion-panel-header>
     }
-  <img class="ammo-image"
-       [ngSrc]="solution.item.inspectImageLink" height="30" width="43.8" priority alt="ammo"
+    <img class="ammo-image"
+       [ngSrc]="solution.item.inspectImageLink" width="87.6" height="60"  priority alt="ammo"
        (click)="openImageDialog(solution.item.inspectImageLink)">
-  <form class="example-form">
     <mat-form-field class="example-full-width">
       <mat-label>Ammo</mat-label>
       <input type="text" matInput [formControl]="guessAmmoControl" [matAutocomplete]="auto" [errorStateMatcher]="autoCompleteStateMatcher">
@@ -33,5 +32,4 @@
         }
       </mat-autocomplete>
     </mat-form-field>
-  </form>
 </mat-expansion-panel>
