--- a/src/app/guessing/guessing.component.html
+++ b/src/app/guessing/guessing.component.html
@@ -4,7 +4,7 @@
   <div class="accordion-wrapper">
     <mat-accordion class="example-headers-align" multi>
       @for (ammo of ammos; track ammo) {
-        <app-guessing-item [solution]=ammo [options]=allAmmos></app-guessing-item>
+        <app-guessing-item [solution]=ammo [options]=allAmmos (guessedEvent)="guessed($event)"></app-guessing-item>
       }
     </mat-accordion>
   </div>
