--- a/src/app/guessing/guessing.component.html
+++ b/src/app/guessing/guessing.component.html
@@ -8,4 +8,9 @@
       }
     </mat-accordion>
   </div>
+  <button class="fixed" mat-mini-fab color="primary" (click)="newGame()"
+          matTooltip="New game"
+          aria-label="Example icon button with a menu icon">
+    <mat-icon>refresh</mat-icon>
+  </button>
 }
