--- a/src/app/sorting/sorting.component.html
+++ b/src/app/sorting/sorting.component.html
@@ -10,7 +10,7 @@
   </div>
   <div *ngIf="isCompleted">Puzzle completed in {{sortingGame.numberOfTries}} moves!</div>
 
-  <button mat-mini-fab color="primary" (click)="newGame()"
+  <button class="fixed" mat-mini-fab color="primary" (click)="newGame()"
           matTooltip="New game"
           aria-label="Example icon button with a menu icon">
     <mat-icon>refresh</mat-icon>
