gun sound draft

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <mat-nav-list>
       <a mat-list-item href="/sorting">Sorting</a>
       <a mat-list-item href="/guessing">Guessing</a>
+      <a mat-list-item href="/gun-sound">Gun Sound</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
