adding game not finished feedback

--- a/src/app/sorting/sorting.component.html
+++ b/src/app/sorting/sorting.component.html
@@ -2,7 +2,7 @@
 
   <h1>Sort the following ammunition by {{sortedOption.name}}</h1>
   <div *ngIf="!isLoadingAmmos && ammos" cdkDropList class="ammo-list" [cdkDropListData]="ammos" (cdkDropListDropped)="dropAmmo($event)">
-    <div>
+    <div [@shakeit]="animationState" (@shakeit.done)="shakeEnd()">
       @for (ammo of ammos; track ammo) {
         <div class="ammo-box" cdkDrag [cdkDragDisabled]="isCompleted" [ngStyle]="{'cursor': isCompleted ? 'default' : 'move'}">
           <app-ammo-list class="ammo-entry" [ammo]="ammo"></app-ammo-list>
