--- a/src/app/sorting/sorting.component.html
+++ b/src/app/sorting/sorting.component.html
@@ -7,15 +7,20 @@
   }
 
   <h1>Sort the following ammunition by {{sortedOption.name}}</h1>
-  <div *ngIf="!isLoadingAmmos && ammos" cdkDropList class="ammo-list" [cdkDropListData]="ammos" (cdkDropListDropped)="dropAmmo($event)">
-    <div [@shakeit]="animationState" (@shakeit.done)="shakeEnd()">
-      @for (ammo of ammos; track ammo) {
-        <div class="ammo-box" cdkDrag [cdkDragDisabled]="isCompleted" [ngStyle]="{'cursor': isCompleted ? 'default' : 'move'}">
-          <app-ammo-list class="ammo-entry" [ammo]="ammo"></app-ammo-list>
-        </div>
-      }
+  @if (!isLoadingAmmos && ammos) {
+    <div cdkDropList class="ammo-list" [cdkDropListData]="ammos" (cdkDropListDropped)="dropAmmo($event)">
+      <div [@shakeit]="animationState" (@shakeit.done)="shakeEnd()">
+        @for (ammo of ammos; track ammo) {
+          <div class="ammo-box" cdkDrag [cdkDragDisabled]="isCompleted" [ngStyle]="{'cursor': isCompleted ? 'default' : 'move'}">
+            <app-ammo-list class="ammo-entry" [ammo]="ammo"></app-ammo-list>
+          </div>
+        }
+      </div>
     </div>
-  </div>
+  } @else {
+    <ngx-skeleton-loader [count]="numberOfItems" appearance="line"
+                         [theme]="{height: '60px'}"></ngx-skeleton-loader>
+  }
 
 </div>
 
