--- a/src/app/gun-sound/gun-sound.component.html
+++ b/src/app/gun-sound/gun-sound.component.html
@@ -1,18 +1,17 @@
 @if (!isLoadingGuns) {
   <h3>Guess the gun sound</h3>
   <mat-tab-group animationDuration="200ms">
-    <mat-tab label="First">
-      <app-gun-sound-item></app-gun-sound-item>
-    </mat-tab>
-
-    <mat-tab label="Second">
-      <app-gun-sound-item></app-gun-sound-item>
-    </mat-tab>
-
-    <mat-tab label="Third">
-      <app-gun-sound-item></app-gun-sound-item>
+    @for (gunSound of gunSounds; track gunSounds; let idx = $index) {
+      <mat-tab [label]="stringifyNumber(idx+1)">
+        <app-gun-sound-item [gunSound]="gunSound" [options]="allGuns"></app-gun-sound-item>
+      </mat-tab>
+    }
+    <mat-tab label="Results">
+      Results
     </mat-tab>
 
   </mat-tab-group>
+} @else {
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 }
 
