--- a/src/app/gun-sound-item/gun-sound-item.component.html
+++ b/src/app/gun-sound-item/gun-sound-item.component.html
@@ -1,14 +1,13 @@
 <div class="container">
   <label id="example-radio-group-label">
-    <audio id="audio" [src]="'assets/'+gunSound.audio" [volume]="1" controls controlsList="nodownload"></audio>
+    <audio id="audio" [src]="'assets/'+gunSoundGame.gunSound.audio" [volume]="1" controls controlsList="nodownload"></audio>
   </label>
   <mat-radio-group
     aria-labelledby="example-radio-group-label"
     class="example-radio-group"
-    [(ngModel)]="favoriteSeason">
-    @for (season of seasons; track season) {
-      <mat-radio-button class="example-radio-button" [value]="season">{{season}}</mat-radio-button>
+    [(ngModel)]="guess">
+    @for (option of gunSoundGame.options; track option) {
+      <mat-radio-button class="example-radio-button" [value]="option">{{option.name}}</mat-radio-button>
     }
   </mat-radio-group>
-  <div>Your favorite season is: {{favoriteSeason}}</div>
 </div>
