--- a/src/app/gun-sound/gun-sound.component.html
+++ b/src/app/gun-sound/gun-sound.component.html
@@ -6,7 +6,7 @@
         <app-gun-sound-item [gunSoundGame]="gunSoundGame" [options]="allGuns" (guessedEvent)="guessed($event, idx)"></app-gun-sound-item>
       </mat-tab>
     }
-    <mat-tab label="Results">
+    <mat-tab label="Results" disabled>
       TODO Results
     </mat-tab>
 
